k8s/overlays/local/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colorflow
  namespace: colorflow
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: mlserver
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
